binrw/tests/ui/invalid_parse_with_fn.stderr
error[E0425]: cannot find value `does_not_exist` in this scope
 --> $DIR/invalid_parse_with_fn.rs:6:23
  |
6 |     #[br(parse_with = does_not_exist)]
  |                       ^^^^^^^^^^^^^^ not found in this scope
